I can teach text

--- a/presentation/scrp_workshop.html
+++ b/presentation/scrp_workshop.html
@@ -91,8 +91,9 @@ class: inverse, center, middle
 
 .footnote[
 
-[Skip intro &amp;mdash; To the contents slide](#contents-slide).]
+[Skip intro &amp;mdash; To the contents slide](#contents-slide). &amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp; &lt;a href="mailto:resuluy@uio.no?subject=Workshop on web scraping"&gt;I can teach this workshop at your institution &amp;mdash; Email me&lt;/a&gt;.
 
+]
 ---
 ## Who am I?
 
@@ -265,7 +266,7 @@ Slides with this background colour indicate that your action is required, for
     - these slides have countdown timers
         - as a guide, not to be followed strictly
     
-<div class="countdown" id="timer_60af81b3" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_60afd79a" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -379,7 +380,7 @@ class: action
    - notice that the documents section is different than the rest
        - it is a page with dynamic frame
 
-<div class="countdown" id="timer_60af841d" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_60afd421" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
    
@@ -480,7 +481,7 @@ install.packages(c("rvest", "RSelenium", "robotstxt", "polite", "dplyr"))
 
 ]
 
-<div class="countdown" id="timer_60af823b" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_60afd550" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">02</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -962,8 +963,8 @@ robotstxt(domain = "https://luzpar.netlify.app")
 ##     spiderbar::can_fetch(obj = self$robexclobj, path = paths, 
 ##         user_agent = bot)
 ## }
-## &lt;bytecode: 0x00000000281c3f58&gt;
-## &lt;environment: 0x00000000281c33c0&gt;
+## &lt;bytecode: 0x0000000027931670&gt;
+## &lt;environment: 0x0000000027930ad8&gt;
 ## 
 ## attr(,"class")
 ## [1] "robotstxt"
@@ -1054,7 +1055,7 @@ class: action
 
   - with the `robotstxt` function
 
-<div class="countdown" id="timer_60af81fc" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_60afd634" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">07</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">30</span></code>
 </div>
 
@@ -1142,7 +1143,7 @@ class: inverse, center, middle
       - e.g., URLs hidden under text
            
 ---
-## HTML &amp;mdash; View in Browser
+## HTML &amp;mdash; Webpage Source
 
 The `Ctrl` `+` `U` shortcut is to display source code &amp;mdash; alternatively, right click and `View` `Page` `Source`
 
@@ -1151,7 +1152,7 @@ The `Ctrl` `+` `U` shortcut is to display source code &amp;mdash; alternatively,
 
 
 ---
-## HTML &amp;mdash; View in Browser &amp;mdash; DOM
+## HTML &amp;mdash; DOM
 
 Browsers also offer putting source codes in a structure
 - known as DOM (document object model), initiated by the `F12` key on Chrome
@@ -1176,12 +1177,12 @@ class: action
 &lt;br&gt;   
 - compare the look of the front- and back-end
 
-<div class="countdown" id="timer_60af83c3" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_60afd41a" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
 ---
-## HTML &amp;mdash; HTML &amp;mdash; Overview
+## HTML &amp;mdash; Overview
 
 .pull-left[
 
@@ -1221,7 +1222,7 @@ class: action
 ]
 
 ---
-## HTML &amp;mdash; HTML &amp;mdash; Overview
+## HTML &amp;mdash; Overview
 
 .pull-left[
 
@@ -1258,7 +1259,7 @@ HTML documents
 ]
 
 ---
-## HTML &amp;mdash; HTML &amp;mdash; Overview
+## HTML &amp;mdash; Overview
 
 .pull-left[
 
@@ -1297,7 +1298,7 @@ HTML documents
 ```
 ]
 ---
-## HTML &amp;mdash; HTML &amp;mdash; the Root
+## HTML &amp;mdash; the Root
 
 .pull-left[
 
@@ -1334,7 +1335,7 @@ HTML documents
 ```
 ]
 ---
-## HTML &amp;mdash; HTML &amp;mdash; the Head
+## HTML &amp;mdash; the Head
 
 .pull-left[
 
@@ -1370,7 +1371,7 @@ HTML documents
 ```
 ]
 ---
-## HTML &amp;mdash; HTML &amp;mdash; Overview
+## HTML &amp;mdash; Overview
 
 .pull-left[
 
@@ -1406,7 +1407,7 @@ HTML documents
 ]
 
 ---
-## HTML &amp;mdash; HTML &amp;mdash; Syntax
+## HTML &amp;mdash; Syntax
 
 Most elements have opening and closing .yellow-h[tags]
 
@@ -1430,7 +1431,7 @@ Note that
 - the closing tag has a forward slash .yellow-h[/] before the element name
 
 ---
-## HTML &amp;mdash; HTML &amp;mdash; Syntax
+## HTML &amp;mdash; Syntax
 
 Most elements have some content
 
@@ -1446,7 +1447,7 @@ This is a one sentence paragraph.
 ]
 
 ---
-## HTML &amp;mdash; HTML &amp;mdash; Syntax
+## HTML &amp;mdash; Syntax
 
 Elements can be nested
 
@@ -1473,7 +1474,7 @@ Note that
 - paragraph is said to be the parent of the strong element
 
 ---
-## HTML &amp;mdash; HTML &amp;mdash; Syntax
+## HTML &amp;mdash; Syntax
 
 Elements can have .yellow-h[attributes]
 
@@ -1499,7 +1500,7 @@ Note that
 
 
 ---
-## HTML &amp;mdash; HTML &amp;mdash; Syntax
+## HTML &amp;mdash; Syntax
 
 There could be more than one attribute in an element
 
@@ -1529,7 +1530,7 @@ Note that
    - while the `id` attribute must be unique on a page
 
 ---
-## HTML &amp;mdash; HTML &amp;mdash; Important Elements &amp; Attibutes 
+## HTML &amp;mdash; Important Elements &amp; Attibutes 
 
 Links are provided with the a (anchor) element
 
@@ -1550,7 +1551,7 @@ Note that
 - most attributes are optional, some are required
 
 ---
-## HTML &amp;mdash; HTML &amp;mdash; Links 
+## HTML &amp;mdash; Links 
 
 Links
 
@@ -1573,7 +1574,7 @@ Note that
 - it becomes visible when hovered over with mouse
 
 ---
-## HTML &amp;mdash; HTML &amp;mdash; Lists
+## HTML &amp;mdash; Lists
 
 The `&lt;ul&gt;` tag introduces un-ordered lists, while the `&lt;li&gt;` tag defines lists items
 
@@ -1659,7 +1660,7 @@ class: action
    - &lt;https://www.w3schools.com/&gt; is a great place to look at
    - save this document as we will continue working on it
 
-<div class="countdown" id="timer_60af82f9" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_60afd56d" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1743,7 +1744,6 @@ CSS is written in .yellow-h[rules]
 
 ```
 ]
-
 
 ---
 ## CSS &amp;mdash; Syntax
@@ -1943,7 +1943,7 @@ class: action
    - increasing the font size of the text in paragraph  
    - change the colour of the second item in the list to red
    
-<div class="countdown" id="timer_60af8213" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_60afd51e" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1990,7 +1990,7 @@ class: inverse, center, middle
 
   - created by [Hadley Wickham](http://http://hadley.nz/)
   - popular &amp;mdash; used by many for web scraping
-      - downloaded 634,224 times last month
+      - downloaded 635,132 times last month
       - some of it must be thanks to being a part of the `tidyverse` family     
 &lt;br&gt;      
   - last major revision was in March 2021
@@ -2722,7 +2722,7 @@ class: action
       - make these URLs absolute   
       - see what other attributes are there to collect     
 
-<div class="countdown" id="timer_60af8297" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_60afd610" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">15</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -3038,7 +3038,7 @@ Hints:
 -  practice with 3 members until you are ready to run the loop for all 
     - e.g., by replacing `1:length(the_links)` with `1:3` for the loop
 
-<div class="countdown" id="timer_60af81db" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_60afd3eb" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">45</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -3101,7 +3101,7 @@ Scraping dynamic pages involves three main tasks
 - A package that integrates [Selenium 2.0 WebDriver](https://www.selenium.dev/documentation/en/) into R
 
   - created by [John Harrison](http://johndharrison.github.io/#/cover)
-  - downloaded 4,983 times last month
+  - downloaded 4,966 times last month
   - last updated in February 2020
 
 --
@@ -3558,7 +3558,7 @@ class: action
 - e.g., take a screenshot of your browser
    - and view it in R
 
-<div class="countdown" id="timer_60af8334" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_60afd6c0" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">15</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -3936,7 +3936,7 @@ class: action
 - to see all results
 
 
-<div class="countdown" id="timer_60af83a3" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_60afd7c3" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -4114,7 +4114,7 @@ Hint
 - start with the related code in the previous slides, and adopt it to your needs  
 
 
-<div class="countdown" id="timer_60af8514" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_60afd62d" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">30</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
