--- a/presentation/scrp_workshop.html
+++ b/presentation/scrp_workshop.html
@@ -266,7 +266,7 @@ Slides with this background colour indicate that your action is required, for
     - these slides have countdown timers
         - as a guide, not to be followed strictly
     
-<div class="countdown" id="timer_62208a65" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_6220914a" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -378,7 +378,7 @@ class: action
    - notice that the documents section is different than the rest
        - it is a page with dynamic frame
 
-<div class="countdown" id="timer_62208b97" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_62209026" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
    
@@ -406,7 +406,7 @@ class: action
    - notice that the documents section is different than the rest
        - it is a page with dynamic frame
 
-<div class="countdown" id="timer_62208a94" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_62209141" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
    
@@ -507,7 +507,7 @@ install.packages(c("rvest", "RSelenium", "robotstxt", "polite", "dplyr"))
 
 ]
 
-<div class="countdown" id="timer_62208b38" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_62208fae" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">02</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1006,7 +1006,7 @@ robotstxt(domain = "https://luzpar.netlify.app")
 ##         user_agent = bot)
 ## }
 ## &lt;bytecode: 0x000001deb42e8d88&gt;
-## &lt;environment: 0x000001dec0501618&gt;
+## &lt;environment: 0x000001debfe75d40&gt;
 ## 
 ## attr(,"class")
 ## [1] "robotstxt"
@@ -1117,7 +1117,7 @@ class: action
   - with the `robotstxt` function
   - reflect on the ethics of scraping that website
 
-<div class="countdown" id="timer_62208ae1" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_6220909c" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">07</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">30</span></code>
 </div>
 
@@ -1239,7 +1239,7 @@ class: action
 &lt;br&gt;   
 - compare the look of the front- and back-end
 
-<div class="countdown" id="timer_62208b4b" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_62208ffd" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1797,7 +1797,7 @@ class: action
        
 - save this document as we will continue working on it
 
-<div class="countdown" id="timer_62208b72" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_62209185" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1861,12 +1861,6 @@ class: inverse, center, middle
 
 &lt;br&gt;
 
-- Note that
-
-   - the syntax changes with the selector type
-      - elements and attributes
-      - among attributes, classes and ids
-
 ]
 
 .pull-right[
@@ -1878,6 +1872,96 @@ class: inverse, center, middle
  `.count` {background-color:yellow;}
 
  `#sentence-count` {color:red; font-size:14px;}
+
+```
+]
+
+---
+## CSS &amp;mdash; Syntax
+
+.pull-left[
+- CSS is written in rules, with a syntax consisting of
+   - one or more &lt;span style="background-color: #ffff88;"&gt;selectors&lt;/span&gt;, matching one or more HTML elements and/or attributes
+
+&lt;br&gt;
+
+- Note that
+
+   - the syntax changes with the selector type
+      - elements and attributes are written as they are
+
+]
+
+.pull-right[
+```md
+ `p` {font-size:14px;}
+
+ `h1 h2` {color:blue;}
+
+ .count {background-color:yellow;}
+
+ #sentence-count {color:red; font-size:14px;}
+
+```
+]
+
+---
+## CSS &amp;mdash; Syntax
+
+.pull-left[
+- CSS is written in rules, with a syntax consisting of
+   - one or more &lt;span style="background-color: #ffff88;"&gt;selectors&lt;/span&gt;, matching one or more HTML elements and/or attributes
+
+&lt;br&gt;
+
+- Note that
+
+   - the syntax changes with the selector type
+      - elements and attributes are written as they are
+      - classes are prefixed with a full stop, ids with a number sign
+
+]
+
+.pull-right[
+```md
+ p {font-size:14px;}
+
+ h1 h2 {color:blue;}
+
+ `.count` {background-color:yellow;}
+
+ `#sentence-count` {color:red; font-size:14px;}
+
+```
+]
+
+---
+## CSS &amp;mdash; Syntax
+
+.pull-left[
+- CSS is written in rules, with a syntax consisting of
+   - one or more &lt;span style="background-color: #ffff88;"&gt;selectors&lt;/span&gt;, matching one or more HTML elements and/or attributes
+
+&lt;br&gt;
+
+- Note that
+
+   - the syntax changes with the selector type
+      - elements and attributes are written as they are
+      - classes are prefixed with a full stop, ids with a number sign
+ 
+   - you can define the same rule for more than one element and/or attribute
+]
+
+.pull-right[
+```md
+ p {font-size:14px;}
+
+ `h1 h2` {color:blue;}
+
+ .count {background-color:yellow;}
+
+ #sentence-count {color:red; font-size:14px;}
 
 ```
 ]
@@ -2080,8 +2164,8 @@ class: action
    - change the colour of the second item in the list to red
    - get more ideas from [www.w3schools.com/css](https://www.w3schools.com/css/default.asp)
    
-<div class="countdown" id="timer_62208aaa" style="top:0;right:0;" data-warnwhen="0">
-<code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
+<div class="countdown" id="timer_62208fd8" style="top:0;right:0;" data-warnwhen="0">
+<code class="countdown-time"><span class="countdown-digits minutes">07</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">30</span></code>
 </div>
 
 ---
@@ -2849,7 +2933,7 @@ class: action
       - make these URLs absolute   
       - see what other attributes are there to collect     
 
-<div class="countdown" id="timer_62208ced" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_62208e87" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">15</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -3165,7 +3249,7 @@ Hints:
 -  practice with 3 members until you are ready to run the loop for all 
     - e.g., by replacing `1:length(the_links)` with `1:3` for the loop
 
-<div class="countdown" id="timer_62208a95" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_62209030" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">45</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -3685,7 +3769,7 @@ class: action
 - e.g., take a screenshot of your browser
    - and view it in R
 
-<div class="countdown" id="timer_62208c6c" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_62209026" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">15</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -4068,7 +4152,7 @@ class: action
 - hint: you will have to find the search bar again
 
 
-<div class="countdown" id="timer_62208a8e" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_62208e75" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -4240,7 +4324,7 @@ class: action
 - published after 2019
 
 
-<div class="countdown" id="timer_62208993" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_62208fe0" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">30</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
