--- a/presentation/scrp_workshop.html
+++ b/presentation/scrp_workshop.html
@@ -265,7 +265,7 @@ Slides with this background colour indicate that your action is required, for
     - these slides have countdown timers
         - as a guide, not to be followed strictly
     
-<div class="countdown" id="timer_62a449b5" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_62a44b30" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -375,7 +375,7 @@ class: action
    - notice that the documents section is different than the rest
        - it is a page with dynamic frame
 
-<div class="countdown" id="timer_62a448d9" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_62a44c89" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
    
@@ -475,7 +475,7 @@ install.packages(c("rvest", "RSelenium", "robotstxt", "polite", "dplyr"))
 
 ]
 
-<div class="countdown" id="timer_62a44762" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_62a44cfc" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">02</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1008,8 +1008,8 @@ robotstxt(domain = "https://luzpar.netlify.app")
 ##     spiderbar::can_fetch(obj = self$robexclobj, path = paths, 
 ##         user_agent = bot)
 ## }
-## &lt;bytecode: 0x00000139c3055ef0&gt;
-## &lt;environment: 0x00000139c3050c00&gt;
+## &lt;bytecode: 0x00000257bc12e528&gt;
+## &lt;environment: 0x00000257bc129350&gt;
 ## 
 ## attr(,"class")
 ## [1] "robotstxt"
@@ -1120,7 +1120,7 @@ class: action
   - with the `robotstxt` function
   - reflect on the ethics of scraping that website
 
-<div class="countdown" id="timer_62a448f3" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_62a44ce5" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1242,7 +1242,7 @@ class: action
 &lt;br&gt;   
 - compare the look of the front- and back-end
 
-<div class="countdown" id="timer_62a44865" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_62a44981" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1800,7 +1800,7 @@ class: action
        
 - save this document as we will continue working on it
 
-<div class="countdown" id="timer_62a44aee" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_62a44b96" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">15</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -2169,7 +2169,7 @@ class: action
    - change the colour of the second item in the list to red
    - get more ideas from [www.w3schools.com/css](https://www.w3schools.com/css/default.asp)
    
-<div class="countdown" id="timer_62a448a5" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_62a44c2f" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">07</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">30</span></code>
 </div>
 
@@ -2611,7 +2611,7 @@ class: action
 - let the website know who you are
 - define delay time
 
-<div class="countdown" id="timer_62a44958" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_62a44cc7" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -2990,7 +2990,7 @@ class: action
 
 - using a single selector that would return both
 
-<div class="countdown" id="timer_62a4481f" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_62a449e9" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -3064,7 +3064,7 @@ class: action
 15) Get the constituency names on the page at &lt;https://luzpar.netlify.app/constituencies/&gt;
 
 
-<div class="countdown" id="timer_62a448ad" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_62a44a9a" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -3231,7 +3231,7 @@ class: action
 17) Create complete links to the constituency pages
 
 
-<div class="countdown" id="timer_62a447a1" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_62a44b14" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -3336,7 +3336,7 @@ class: action
       - make these URLs absolute   
       - see what other attributes are there to collect     
 
-<div class="countdown" id="timer_62a4480d" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_62a44bd6" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">15</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -3648,7 +3648,7 @@ Hints:
 -  practice with 3 members until you are ready to run the loop for all 
     - e.g., by replacing `1:length(the_links)` with `1:3` for the loop
 
-<div class="countdown" id="timer_62a44a39" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_62a44cda" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">45</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -3939,7 +3939,7 @@ class: action
 - call it `browser` to help you follow the slides
 
 
-<div class="countdown" id="timer_62a44a77" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_62a44abc" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">02</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">30</span></code>
 </div>
 
@@ -4044,7 +4044,7 @@ class: action
 - e.g., take a screenshot of your browser
    - and view it in R
 
-<div class="countdown" id="timer_62a44810" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_62a44aa7" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -4245,7 +4245,7 @@ class: action
 - compare the outcomes
 
 
-<div class="countdown" id="timer_62a4489d" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_62a44bc0" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">07</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">30</span></code>
 </div>
 
@@ -4469,7 +4469,7 @@ class: action
 - hint: you will have to find the button again
 
 
-<div class="countdown" id="timer_62a44980" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_62a44976" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">07</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">30</span></code>
 </div>
 
@@ -4641,7 +4641,7 @@ class: action
 33) Go back, and conduct another search
 - hint: you will have to find the search bar again
 
-<div class="countdown" id="timer_62a44a19" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_62a44c8a" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">15</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -4816,7 +4816,7 @@ Hint:
 - start with the related code in the previous slides
   - modify as necessary
 
-<div class="countdown" id="timer_62a447e8" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_62a44c99" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">30</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
